[modify] 3rd-lib -- Add fluorine in prototype.html

--- a/studynet/templates/prototype.html
+++ b/studynet/templates/prototype.html
@@ -22,5 +22,11 @@
     </div>
     
 <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
+<!-- fluorine -->
+<script src="{{ STATIC_URL }}js/lib/fluorine/library/jquery/jquery-min.js"></script>
+<script src="{{ STATIC_URL }}js/lib/fluorine/library/underscore/underscore-min.js"></script>
+<script src="{{ STATIC_URL }}js/lib/fluorine/library/main/notifier.js"></script>
+<script src="{{ STATIC_URL }}js/lib/fluorine/library/main/process.js"></script>
+<script src="{{ STATIC_URL }}js/lib/fluorine/library/main/context.js"></script>
 </body>
 </html>
