--- a/studynet/templates/prototype.html
+++ b/studynet/templates/prototype.html
@@ -103,7 +103,7 @@
             </div>
         </div>
     </div>
-<script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
+<script src="{{ STATIC_URL }}js/lib/bootstrap.min.js"></script>
 <!-- fluorine -->
 <script src="{{ STATIC_URL }}js/lib/fluorine/library/jquery/jquery-min.js"></script>
 <script src="{{ STATIC_URL }}js/lib/fluorine/library/underscore/underscore-min.js"></script>
