--- a/studynet/templates/prototype.html
+++ b/studynet/templates/prototype.html
@@ -5,12 +5,16 @@
     <title>StudyNet Prototype</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.min.css" />
     <!-- fluorine -->
+    <!--
     <script src="{{ STATIC_URL }}js/lib/fluorine/library/jquery/jquery-min.js"></script>
     <script src="{{ STATIC_URL }}js/lib/fluorine/library/underscore/underscore-min.js"></script>
+    -->
     <script src="{{ STATIC_URL }}js/lib/fluorine/library/main/notifier.js"></script>
     <script src="{{ STATIC_URL }}js/lib/fluorine/library/main/process.js"></script>
     <script src="{{ STATIC_URL }}js/lib/fluorine/library/main/context.js"></script>
     <!-- bootstrap -->
+    <script src="{{ STATIC_URL }}js/lib/jquery-min.js"></script>
+    <script src="{{ STATIC_URL }}js/lib/underscore-min.js"></script>
     <script src="{{ STATIC_URL }}js/lib/bootstrap.min.js"></script>
 
 </head>
