--- a/studynet/templates/courses.html
+++ b/studynet/templates/courses.html
@@ -2,6 +2,14 @@
 
 {% block course_active %}active{% endblock %}
 
+{% block head_end %}
+<style type="text/css">
+    .course-table tbody {
+        cursor: pointer;
+    }
+</style>
+{% endblock %}
+
 {% block content_with_fluid %}
 
 <!-- Left float -->
@@ -37,7 +45,7 @@
     </div>
     <h3>Courses</h3>
 
-    <table class="table table-hover">
+    <table class="table table-hover course-table">
         <thead>
             <tr>
                 <th>Semester</th>
