--- a/extension/social-nccu/chrome/css/widget.css
+++ b/extension/social-nccu/chrome/css/widget.css
@@ -8,3 +8,19 @@
     text-decoration: underline;
     white-space: nowrap;
 }
+
+.label.forward-done
+{
+    background: #FFFFCC;
+    border-radius: 5px;
+    color: black;
+    margin: 5px;
+    position: relative;
+    left: 100px;
+}
+
+.label.forward-done > a
+{
+    color:blue;
+    text-decoration: underline;
+}
