added ajax(not confirmed), start modifying template to chinese

--- a/studynet/templates/courses.html
+++ b/studynet/templates/courses.html
@@ -50,13 +50,13 @@
     <table class="table table-hover course-table">
         <thead>
             <tr>
-                <th>Semester</th>
-                <th>Course#</th>
-                <th>Name</th>
-                <th>Teacher</th>
-                <th>Credit Pt.</th>
-                <th>Time</th>
-                <th>Classroom</th>
+                <th>學期</th>
+                <th>課程代碼</th>
+                <th>名稱</th>
+                <th>教授</th>
+                <th>學分數</th>
+                <th>上課時間</th>
+                <th>上課地點</th>
             </tr>
         </thead>
             {% for course in courses %}
