--- a/studynet/templates/base.html
+++ b/studynet/templates/base.html
@@ -76,7 +76,7 @@
         <hr />
 
         <footer>
-            <p>© NCCUCS PLSM Lab 2012</p>
+            <p>© LittleQ X Snowman 2012</p>
         </footer>
     </div>
 
