--- a/studynet/templates/home.html
+++ b/studynet/templates/home.html
@@ -4,28 +4,33 @@
 
 {% block content_with_fluid %}
 <div class="hero-unit">
-    <h2>New Study Way in This New Semester</h2>
-    <p>Choosing Courses won't be boring anymore, and will be with fun. So does learning.</p>
+    <h2>新學期。新開始</h2>
+    <p>和同學一起選課、上課、討論，都變得不再那麼無聊：）</p>
     <p>
         <a class="btn btn-primary btn-large" href="/courses">
-            Start from here
+            開始吧！
         </a>
     </p>
 </div>
 
 <div class="row-fluid">
     <div class="span4 well-large">
-        <h3>Technologies</h3>
-        <p>We have self-confidence at all technologies we used to build this website. It's high-tolerance, high-performance and never fall down when you need it.</p>
-        <p>More features are on the way, we promised will provide students a clean, fast and useful system for everything in school.</p>
+        <h3>科技始終來自於人性</h3>
+        <p>對於大學生來說，選課、上課和討論一直都是一件很麻煩的事情，原因是在這個科技發得的時代，卻沒有好的解決方案來作這些事情，「科技始終來自於人性」，因此我們利用科技，提供你最時尚的網路環境，讓這些事情都像使用臉書般容易。</p>
     </div>
     <div class="span4 well-large">
-        <h3>Why Do We Do?</h3>
-        <p>The reason why we spend efforts on this website is only one, convenience of student, which push us to create this website. Because of much crashing on our schools's platforms, students feel much inconvenience, they deserve better one.</p>
+        <h3>這是什麼？</h3>
+        <p>
+            這是一個網站（無誤）。
+        </p>
+        <p>
+            這是一個和政大學生息息相關的課程網站，我們將會在未來推出幾個我們規劃好的功能，讓你在上課時完全不想上臉書只想要上這個網站。
+        </p>
+
     </div>
     <div class="span4 well-large">
-        <h3>About Us</h3>
-        <p>Show you who did this.</p>
+        <h3>關於我們</h3>
+        <p>我們只是一群阿宅，我們知道大家也是，所以我們做出了讓大家可以「宅」著學習的方式，希望大家會喜歡。</p>
     </div>
 </div>
 
