added course uuid to template, changed title

--- a/studynet/templates/base.html
+++ b/studynet/templates/base.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>StudyNet</title>
+    <title>Social Study</title>
+
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.min.css" />
     <!-- fluorine -->
     <!--
