added counter for counting clicking.

--- a/studynet/templates/courses.html
+++ b/studynet/templates/courses.html
@@ -57,6 +57,7 @@
                 <th>學分數</th>
                 <th>上課時間</th>
                 <th>上課地點</th>
+                <th>點閱數</th>
             </tr>
         </thead>
 
@@ -70,6 +71,7 @@
                 <td>{{course.fs_credit_point}}</td>
                 <td>{{course.fs_class_time}}</td>
                 <td>{{course.fs_class_room}}</td>
+                <td>{{course.click}}</td>
             </tr>
         </tbody>
         {% endfor %}
