redirecting finished and auto popup

--- a/studynet/templates/base.html
+++ b/studynet/templates/base.html
@@ -89,7 +89,14 @@
         <hr />
 
         <footer>
-            <p>© LittleQ X Snowman 2012</p>
+            <div class="pull-right">
+                <a href="https://chrome.google.com/webstore/detail/lpihnfnmcibhakaadhjhdfppndhomkid">
+                    <img src="{{ STATIC_URL }}img/available-on-chrome-store.png" alt="" height="50"/>
+                </a>
+            </div>
+            <div class="well-large">
+                <p>© LittleQ X Snowman 2012</p>
+            </div>
         </footer>
     </div>
 
