--- a/studynet/templates/base.html
+++ b/studynet/templates/base.html
@@ -39,13 +39,21 @@
     <script>
         window.fbAsyncInit = function() {
             FB.init({
-                    appId      : '142892519093949', // App ID
-                    channelUrl : '/channel.html', // Channel File
-                    status     : true, // check login status
-                    cookie     : true, // enable cookies to allow the server to access the session
-                    xfbml      : true  // parse XFBML
-                    });
+                appId      : '417930571597341', // App ID
+                channelUrl : '/channel.html', // Channel File
+                status     : true, // check login status
+                cookie     : true, // enable cookies to allow the server to access the session
+                xfbml      : true  // parse XFBML
+            });
             // Additional initialization code here
+            // Add share dialog attached on share button
+            $(".fb-share-btn").on('click', function(evt){
+                FB.ui({
+                    method: "send",
+                    name: "Social Study 政大選課評論",
+                    link: "http://socialstudy.tw/"
+                })
+            });
         };
 
         // Load the SDK Asynchronously
@@ -69,9 +77,14 @@
                 <li><a href="mailto:littleq0903@gmail.com">Contact Us</a></li>
                 <li><a href="#"></a></li>
             </ul>
-            <form class="navbar-search pull-right">
-                <input type="text" class="search-query" placeholder="Search">
-            </form>
+
+            <ul class="nav pull-right">
+                <li>
+                    <a class="fb-share-btn" href="#">
+                        <i class="icon-share-alt icon-white"></i> Share to Facebook
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 
@@ -89,13 +102,17 @@
         <hr />
 
         <footer>
+            <!--
             <div class="pull-right">
                 <a href="https://chrome.google.com/webstore/detail/lpihnfnmcibhakaadhjhdfppndhomkid">
                     <img src="{{ STATIC_URL }}img/available-on-chrome-store.png" alt="" height="50"/>
                 </a>
             </div>
-            <div class="well-large">
+            -->
+            <div>
+                <center>
                 <p>© LittleQ X Snowman 2012</p>
+                </center>
             </div>
         </footer>
     </div>
