--- a/studynet/templates/courses.html
+++ b/studynet/templates/courses.html
@@ -47,6 +47,15 @@
     -->
     <h3>Courses</h3>
 
+    <div class="alert">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+        <strong>覺得課程資料不太夠？</strong>別著急，並前往
+        <a href="http://wa.nccu.edu.tw/QryTor/" target="_blank">
+        政大選課系統
+        </a>
+        查詢你找的那堂課，並按下「加入 Social Study」，就會在這裡看到囉！
+    </div>
+
     <table class="table table-hover course-table">
         <thead>
             <tr>
@@ -147,6 +156,7 @@
             var course_id = result[0].split("=")[1];
             open_course_modal(course_id);
         }
+
     });
 </script>
 
