--- a/studynet/templates/home.html
+++ b/studynet/templates/home.html
@@ -19,7 +19,7 @@
         <center class="well-large">
             <img class="img-polaroid" src="{{ STATIC_URL }}img/schoolserver_sucks.jpeg" alt="" />
         </center>
-        <p>對於大學生來說，選課、上課和討論一直都是一件很麻煩的事情，原因是在這個科技發得的時代，卻沒有好的解決方案來作這些事情，「科技始終來自於人性」，因此我們利用科技，提供你最時尚的網路環境，讓這些事情都像使用臉書般容易。</p>
+        <p>對於大學生來說，選課、上課和討論一直都是一件很麻煩的事情，原因是在這個科技發達的時代，卻沒有好的解決方案來作這些事情，「科技始終來自於人性」，因此我們利用科技，提供你最時尚的網路環境，讓這些事情都像使用臉書般容易。</p>
     </div>
     <div class="span4 well-large">
         <h3>這是什麼？</h3>
