added meta tags

--- a/studynet/templates/base.html
+++ b/studynet/templates/base.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="LittleQ"/>
+    <meta name="description" content="政大選課評論系統，用學校選課系統選課太無聊嗎？來試試看 Social Study 吧！"/>
+    
     <title>Social Study</title>
 
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.min.css" />
