--- a/studynet/templates/course.html
+++ b/studynet/templates/course.html
@@ -48,7 +48,7 @@
 var postCourse = function ()
 {
     FB.api(
-            '/me/socialstudytw:course',
+            '/me/socialstudytw:study',
             'post',
             { course: '{{ course_link }}' },
             function(response) {
